# community

./: .gitattributes  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  autostart-install.bat  autostart-remove.bat  check-python.bat  create_startup_shortcut.ps1  pyproject.toml  requirements-build.txt  requirements-mcp.txt  requirements.txt  setup-python.bat  setup-unix.sh  start-silent.bat  start.bat  start.sh  stop.bat  update.bat  update.sh  version.json
agents/: add_knowledge.md  analyze_knowledge.md  ask_deskagent.md  chat.md  configure_deskagent.md  create_agent.md  create_offer.md  create_teams_meeting_graph.md  daily_check.md  deskagent_support_reply.md  find_duplicates.md  formulate_text.md  improve_agent.md  linkedin_post.md  mail_sort_done.md  mailsort.md  mailsort_followup.md  mailsort_offers.md  paperless_auto_tag.md  reply_email.md  reply_email_gmail.md  reply_email_office365.md  summarize_communication.md  summarize_mail_conversation.md  system_health_check.md  test_mcp.md
config/: agents.json  anonymizer.json  apis.json  backends.json  categories.json  claude_settings.json  system.json  triggers.json
cowork-plugin/: .mcp.json  README.md
i18n/: de.json  en.json
knowledge/: deskagent.md  doc-agent-frontmatter-reference.md  doc-ai-backends.md  doc-anonymization.md  doc-api-reference.md  doc-claude-desktop-integration.md  doc-config-reference.md  doc-creating-agents.md  doc-creating-mcp-servers.md  doc-folder-structure.md  doc-knowledge-system.md  doc-licensing.md  doc-macos-installation.md  doc-mcp-tools.md  doc-overview.md  doc-pluginsystem.md  doc-prompt-optimization-guide.md  doc-session-management.md  doc-setup-wizard.md  doc-startup-and-directories.md  doc-ui-agent-lifecycle.md  doc-workflows.md
mcp/: _link_utils.py  (+4 more)
(+342 files in other folders)
